%% Search indexes not expressible as ER relationships:
%% recipes.title and recipe_ingredients.name use GIN pg_trgm indexes.
erDiagram
    profiles ||--o{ recipes : owns
    profiles ||--o{ tags : owns
    profiles ||--o{ equipment : owns
    profiles ||--o{ pantry_items : owns
    profiles ||--o{ meal_plans : owns
    profiles ||--o{ grocery_lists : owns

    recipes ||--o{ recipe_links : has
    recipes ||--o{ recipe_meal_types : categorized_as
    recipes ||--o{ recipe_effort_labels : described_by
    recipes ||--o{ recipe_ingredients : has
    recipes ||--o{ recipe_steps : has
    recipes ||--o{ recipe_tags : has
    tags ||--o{ recipe_tags : labels

    recipes ||--o{ recipe_equipment : requires
    equipment ||--o{ recipe_equipment : categorizes

    meal_plans ||--o{ meal_plan_entries : contains
    recipes ||--o{ meal_plan_entries : scheduled_as

    meal_plans ||--o{ grocery_lists : can_generate
    grocery_lists ||--o{ grocery_list_items : contains
    grocery_list_items ||--o{ grocery_list_item_sources : records
    recipes ||--o{ grocery_list_item_sources : contributed
    recipe_ingredients ||--o{ grocery_list_item_sources : snapshots

    profiles {
        uuid id PK
        text username
        text display_name
        text avatar_url
        text bio
        timestamptz created_at
        timestamptz updated_at
    }

    recipes {
        uuid id PK
        uuid owner_id FK
        text title
        text slug
        text summary
        text notes
        int servings
        int prep_minutes
        int cook_minutes
        cost_rating cost_rating
        difficulty_level difficulty
        numeric estimated_total_cost
        recipe_visibility visibility
        text image_url
        text image_storage_path
        text source_name
        text source_url
        boolean is_favorite
        timestamptz published_at
        timestamptz archived_at
        timestamptz created_at
        timestamptz updated_at
    }

    recipe_meal_types {
        uuid recipe_id PK,FK
        meal_type meal_type PK
        timestamptz created_at
    }

    recipe_effort_labels {
        uuid recipe_id PK,FK
        recipe_effort_label effort_label PK
        timestamptz created_at
    }

    recipe_links {
        uuid id PK
        uuid recipe_id FK
        text label "optional"
        text url
        int sort_order
        timestamptz created_at
    }

    recipe_ingredients {
        uuid id PK
        uuid recipe_id FK
        text name
        numeric amount
        text unit
        text notes
        text group_name
        int sort_order
        timestamptz created_at
        timestamptz updated_at
    }

    recipe_steps {
        uuid id PK
        uuid recipe_id FK
        text instruction
        int timer_minutes
        int sort_order
        timestamptz created_at
        timestamptz updated_at
    }

    tags {
        uuid id PK
        uuid owner_id FK
        text label
        text color
        timestamptz created_at
    }

    recipe_tags {
        uuid recipe_id PK,FK
        uuid tag_id PK,FK
        timestamptz created_at
    }

    equipment {
        uuid id PK
        uuid owner_id FK
        text label
        text preset_key "optional controlled key"
        timestamptz created_at
    }

    recipe_equipment {
        uuid recipe_id PK,FK
        uuid equipment_id PK,FK
        timestamptz created_at
    }

    pantry_items {
        uuid id PK
        uuid owner_id FK
        text name
        text default_unit
        numeric estimated_unit_cost
        pantry_item_status status
        timestamptz created_at
        timestamptz updated_at
    }

    meal_plans {
        uuid id PK
        uuid owner_id FK "unique with week_start_date"
        date week_start_date "unique with owner_id"
        text title
        timestamptz created_at
        timestamptz updated_at
    }

    meal_plan_entries {
        uuid id PK
        uuid meal_plan_id FK "exact-entry unique key"
        uuid recipe_id FK "exact-entry unique key"
        date planned_for "exact-entry unique key"
        meal_type meal_type "exact-entry unique key"
        int servings
        text notes
        timestamptz created_at
    }

    grocery_lists {
        uuid id PK
        uuid owner_id FK
        uuid meal_plan_id FK
        text title
        grocery_list_source_type source_type
        int source_recipe_count
        date source_week_start_date
        timestamptz created_at
        timestamptz updated_at
    }

    grocery_list_items {
        uuid id PK
        uuid grocery_list_id FK
        text name
        numeric amount
        text unit
        text notes
        text normalized_name "generated; unique per list"
        boolean quantity_overridden
        boolean is_manual
        boolean checked
        int sort_order
        timestamptz created_at
        timestamptz updated_at
    }

    grocery_list_item_sources {
        uuid id PK
        uuid grocery_list_item_id FK
        uuid recipe_id FK "optional after source deletion"
        uuid recipe_ingredient_id FK "optional after source deletion"
        text recipe_title
        text ingredient_name
        numeric ingredient_amount
        text ingredient_unit
        text ingredient_notes
        int saved_servings
        int target_servings
        numeric scale_factor
        numeric contributed_amount
        text canonical_unit
        int sort_order
        timestamptz created_at
    }
